<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="web.id.fajar.moviestar.ui.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="web.id.fajar.moviestar.ui.tvshow.TvShowFragment"
        android:label="@string/title_tvshow"
        tools:layout="@layout/fragment_tvshow" />
</navigation>